# agent-forge

./: .gitignore  ARCHITECTURE.md  Anchor.toml  BUILD.md  DEMO.md  MORNING-SUMMARY.md  README.md  SKILL.md  package-lock.json  package.json  program-keypair.json
contracts/: AgentForge.sol
demo/: agent-forge-demo.cast  run-demo.sh
docs/: FORUM_UPDATE.md  TWEET_THREAD.md
programs/agent-forge/: Cargo.toml
programs/agent-forge/src/: lib.rs
tests/: agent-forge.ts  devnet-demo.ts  poc-demo.ts
