[package]
name = "agent-forge"
version = "0.1.0"
description = "Solana program for agent spawning and task delegation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_forge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
